get tweet from json

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           </form>
         </div>
         <div class="feed">
-          <!-- <div class="tweet">
-            <span class="tweet-pseudo">@sample</span>
+          <div class="tweet" mv-multiple property="feed" mv-order="desc" typeof="Item">
+            <span class="tweet-pseudo" property="user">@sample</span>
             <span class="tweet-date">11/23/16 14:23</span>
-            <span class="tweet-message">The tweet content</span>
-          </div> -->
+            <span class="tweet-message" property="tweet">The tweet content</span>
+          </div>
         </div>
       </div>
       <div class="col-md-2"></div>
