changed information for my repo

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <title>Decentralized Twitter</title>
   </head>
   <body>   
-    <div class="container" mv-app="decentralized-twitter" mv-storage="https://github.com/ashays/decentralized-twitter/data.json">
+    <div class="container" mv-app="decentralized-twitter" mv-storage="https://github.com/wthompson40/decentralized-twitter/data.json">
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <h1>Decentralized Twitter</h1>
         <p class="lead">Your feed and tweets are stored on your personal GitHub.</p>
         <div class="tweet-compose">
-          <span class="tweet-pseudo">@ashays</span>
+          <span class="tweet-pseudo">@wthompson40</span>
           <form id="new-tweet">
             <textarea placeholder="Compose new tweet" required></textarea>
             <input type="submit" class="btn btn-primary" value="Tweet" id="tweet-btn">
