Revert to get login working

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
       </div>
     </div>
+    <!-- // <script src="js/mavo-custom.es5.js"></script> -->
     <script src="js/mavo.es5.js"></script>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/script.js"></script>
